# vault-core

./: .gitignore  .prettierignore  .prettierrc  ARCHITECTURE.md  Cargo.toml  HACKING.md  INTEGRATION_GUIDE.md  README.md  REVENUE_MODEL.md  SCALABILITY_AND_COSTS.md  SECURITY_EVOLUTION.md  SPECS.md  SPECS_V1.md  SPECS_V2.md  TODO.md  UPLOAD_TOKENS.md  USAGE.md  canister_ids.json  dfx.json  package-lock.json  package.json
.github/: dependabot.yml
.github/actions/prepare/: action.yml
.github/workflows/: checks.yml  release.yml  tests.yml
scripts/: build.sh  demo_upload.sh  did.sh  format.sh  lint.cargo-workspace-dependencies.sh  lint.did.sh  lint.github.sh  lint.rust.sh  lint.sh  lint.sh.sh  pic-install  test-integration.sh  test-rust.sh  test_upload_flow.sh  upload_file.sh
src/bucket/: Cargo.toml  README.md  bucket.did
src/bucket/src/: api.rs  config.rs  errors.rs  lib.rs  memory.rs  payments.rs  results.rs  types.rs
src/directory/: Cargo.toml  README.md  directory.did
src/directory/src/: api.rs  billing.rs  config.rs  errors.rs  lib.rs  memory.rs  payments.rs  results.rs  types.rs
src/shared/: Cargo.toml
src/shared/src/: auth.rs  constants.rs  lib.rs  types.rs
src/vault-core-backend/: Cargo.toml
tests/it/: Cargo.toml
tests/it/proxy/: Cargo.toml
tests/it/proxy/src/: lib.rs
tests/it/src/: acl_tests.rs  bucket_tests.rs  directory_tests.rs  flow_tests.rs  link_tests.rs  main.rs  util.rs
