[workspace]
members = ["src/bucket", "src/directory", "src/shared"]
resolver = "2"

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10"
hmac = "0.12"
shared = { path = "src/shared" }
bucket = { path = "src/bucket" }
