[workspace]
members = ["src/bucket", "src/directory", "src/shared"]
resolver = "2"

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.13"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10"
hmac = "0.12"
shared = { path = "src/shared" }
bucket = { path = "src/bucket" }
ic-papi-api = { git = "https://github.com/dfinity/papi", rev = "43c42fa2ea5f3d23d81360749deb58a29450c237" }
ic-papi-guard = { git = "https://github.com/dfinity/papi", rev = "43c42fa2ea5f3d23d81360749deb58a29450c237" }
