[package]
name = "directory"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-papi-api = { workspace = true }
ic-papi-guard = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
shared = { workspace = true }
