[package]
name = "shared"
version = "0.0.1"
edition = "2021"

[dependencies]
candid = { workspace = true }
hmac = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
