[package]
name = "it"
version = "0.0.1"
edition = "2021"

[dependencies]
# Add bucket and directory as dependencies to access types if needed, 
# but we'll mostly use Candid for calls.
bucket = { path = "../../src/bucket" }
candid = { workspace = true }
directory = { path = "../../src/directory" }
hex = { workspace = true }
ic-papi-api = { workspace = true }
icrc-ledger-types = { workspace = true }
pocket-ic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { path = "../../src/shared" }
